# treeio

./: .gitignore  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  Pipfile  README.md  README.rst  cli.html  index.html  json.html  jt.html  newick.html  pyproject.toml  setup.cfg  setup.py  show.html  tox.ini  tree.html  treeio.html  utils.html
.github/workflows/: main.yml  pdoc.yml  testpypi.yml
.vim/: coc-settings.json
data/: animals.json
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  treeio.rst  usage.rst
pip-wheel-metadata/treeio-0.0.0.dev0.dist-info/: METADATA
tests/: test_jt.py  test_show.py  test_tree.py  test_treeio.py
treeio/: __init__.py  cli.py  json.py  jt.py  newick.py  show.py  tree.py  treeio.py  utils.py
