[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "treeio"
version = "0.0.0.dev5"
description = "A pure python parser for tree data format IO"
authors = ["Ye Chang <yech1990@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yech1990/treeio"

[tool.poetry.dependencies]
python = "^3.8"
Click = "^7.0.0"

[tool.poetry.dev-dependencies]
twine = "^3.0.0"

[tool.poetry.scripts]
treeio = "treeio.cli:cli"
